Name:                commonmark
Version:             0.1.0.0
Synopsis:            A library for parsing and rendering CommonMark
-- Description:
-- Homepage:
License:             BSD3
License-file:        LICENSE
-- Bug-reports:
Author:              Julien Cretel
Maintainer:          j.cretel@umail.ucc.ie
Copyright:           (c) 2015 Julien Cretel
Category:            Text
Build-type:          Simple
Extra-source-files:  README.markdown
Cabal-version:       >=1.10

Library
  Exposed-modules:     CommonMark
  -- Other-modules:
  Other-extensions:    OverloadedStrings
  Build-depends:       attoparsec >= 0.10.2,
                       base >= 4.8 && < 4.9,
                       blaze-html >= 0.6,
                       charset >= 0.3.7.1,
                       containers >= 0.4,
                       data-default >= 0.5,
                       parsec >= 3.0.0,
                       text >= 1.2.1.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  -- ghc-options:         -Wall -O2
